--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autosize": "^4.0.2",
     "axios": "^0.19.2",
     "compare-func": "^2.0.0",
+    "cordova": "^10.0.0",
     "cordova-android": "^9.0.0",
     "cordova-clipboard": "^1.3.0",
     "cordova-custom-config": "^5.1.0",
