--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Sep 14 08:30:04 EDT 2020
+#Mon Sep 14 09:14:31 EDT 2020
+ndk.dir=D\:\\AppData\\Local\\Android\\Sdk\\ndk\\21.3.6528147
 sdk.dir=D\:\\AppData\\Local\\Android\\Sdk
